# pinkbabel-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
src/mi_bot/: __init__.py  bot.py  config.py  health.py  languages.py  main.py  storage.py  translator.py  ui.py  webhook.py
supabase/: schema.sql
tests/: conftest.py  test_basic.py
