[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mi-bot"
version = "0.1.0"
description = "PinkBabel, a multilingual Telegram translation bot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "deep-translator>=1.11,<2.0",
  "python-telegram-bot>=22.0,<23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mi-bot = "mi_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
